Extracted container creation Added simple browser test Updated packages

--- a/.config/docker/apache2/vhost.conf
+++ b/.config/docker/apache2/vhost.conf
@@ -1,9 +1,10 @@
 <VirtualHost *:8443>
+  ServerName apache-web:8443
   DocumentRoot "/app/public"
   ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://phpfpm:9000/app/public/$1
   SSLEngine on
-  SSLCertificateFile "/opt/bitnami/apache2/conf/bitnami/certs/server.crt"
-  SSLCertificateKeyFile "/opt/bitnami/apache2/conf/bitnami/certs/server.key"
+  SSLCertificateFile "/certs/server.crt"
+  SSLCertificateKeyFile "/certs/server.key"
   <Directory "/app/public">
     Options +FollowSymLinks -Indexes
     AllowOverride All
