--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Generate certs
+        run: |
+          .config/docker/apache2/certs/generate
+
       - name: Setup Docker
         uses: isbang/compose-action@v1.4.1
+
+      - name: Wait for Selenium
+        run: |
+          sleep 10
 
       - name: Run tests
         run: |
