--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "symfony/http-foundation": "^6.1",
     "symfony/routing": "^6.1",
     "intervention/image": "^2.7",
-    "monolog/monolog": "^3.2"
+    "monolog/monolog": "^3.2",
+    "php-webdriver/webdriver": "^1.13"
   },
   "config": {
     "platform": {
