--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,9 @@
         <testsuite name="unit">
             <directory>tests/Unit</directory>
         </testsuite>
+        <testsuite name="browser">
+            <directory>tests/Browser</directory>
+        </testsuite>
     </testsuites>
 
     <coverage cacheDirectory=".phpunit.cache/code-coverage"
@@ -24,4 +27,9 @@
             <directory suffix=".php">src</directory>
         </include>
     </coverage>
+
+    <php>
+        <env name="APP_URL" value="https://apache-web:8443"/>
+        <env name="SELENIUM_SERVER_URL" value="http://selenium-hub:4444/wd/hub"/>
+    </php>
 </phpunit>
